--- a/.gitignore
+++ b/.gitignore
@@ -790,3 +790,4 @@ venv/lib/python3.9/site-packages/zipp-3.23.0.dist-info/RECORD
 venv/lib/python3.9/site-packages/zipp-3.23.0.dist-info/top_level.txt
 venv/lib/python3.9/site-packages/zipp-3.23.0.dist-info/WHEEL
 venv/lib/python3.9/site-packages/zipp-3.23.0.dist-info/licenses/LICENSE
+__pycache__/app.cpython-313.pyc
