--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
 blinker==1.9.0
 click==8.3.0
 Flask==3.1.2
+Flask-Minify==0.50
+htmlminf==0.1.13
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jsmin==3.0.1
+lesscpy==0.15.1
 MarkupSafe==3.0.3
+ply==3.11
+rcssmin==1.2.2
+six==1.17.0
 Werkzeug==3.1.3
+xxhash==3.6.0
